--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,10 +56,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Discord notification
+        uses: sarisia/actions-status-discord@v1
         # if: ${{ github.event_name == 'push' && !env.SKIP_COMMIT }}
         if: ${{ env.SKIP_COMMIT }}
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        uses: Ilshidur/action-discord@0.4.0
         with:
-          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          nodetail: true
+          title: "New version of `software` is ready!"
+          description: |
+            Version `${{ github.event.release.tag_name }}`
+            Click [here](${{ github.event.release.html_url }}) to download!
+          color: 0xff91a4
