--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,19 +51,16 @@ jobs:
           TAG_PREFIX: v
 
   discord_notify:
-    needs: [simple_deployment_pipeline]
+    needs: [tag_release]
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - name: Discord notification
-        uses: sarisia/actions-status-discord@v1
+        uses: sarisia/actions-status-discord@v1.15.4
         # if: ${{ github.event_name == 'push' && !env.SKIP_COMMIT }}
         if: ${{ env.SKIP_COMMIT }}
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          status: ${{ job.status }}
+          title: ${{ github.event.commits.*.message }}
           nodetail: true
-          title: "New version of `software` is ready!"
-          description: |
-            Version `${{ github.event.release.tag_name }}`
-            Click [here](${{ github.event.release.html_url }}) to download!
-          color: 0xff91a4
