--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,10 +55,10 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Discord notification
-        if: always()
+        if: ${{ github.event_name == 'push' && !env.SKIP_COMMIT }}
         uses: sarisia/actions-status-discord@v1
         with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
           nodetail: true
           status: ${{ job.status }}
           color: ${{ job.status == 'success' && '0x00ff00' || '0xff0000' }}
