--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,3 +49,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
           TAG_PREFIX: v
+
+  discord_notify:
+    needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Discord notification
+        if: ${{ github.event_name == 'push' && !env.SKIP_COMMIT }}
+        uses: sarisia/actions-status-discord@v1
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          nodetail: true
+          status: ${{ job.status }}
+          color: ${{ job.status == 'success' && '0x00ff00' || '0xff0000' }}
+          title: ${{ job.status == 'success' && 'A new version deployed' || 'Build failed!' }}
+          description: |
+            **Commit:** [${{ github.sha }}](${{ github.event.head_commit.url }})  
+            **Author:** ${{ github.event.head_commit.author.name }}  
+            **Message:** ${{ github.event.head_commit.message }}
