--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,10 +19,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Commit messages
-        env:
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        run: echo "$COMMIT_MESSAGES"
       - name: Install dependencies
         run: npm ci
       - name: Check style
@@ -59,7 +55,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Discord notification
-        if: ${{ github.event_name == 'push' && !env.SKIP_COMMIT }}
+        if: ${{ always() && github.ref_name == 'main' }}
         uses: sarisia/actions-status-discord@v1
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
