--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ on:
     types: [opened, synchronize]
 
 env:
-  SKIP_COMMIT: ${{ contains(github.event.head_commit.message, '#skip') }}
+  SKIP_COMMIT: ${{ contains(github.event.pull_request.title, '#skip') }}
 
 jobs:
   simple_deployment_pipeline:
@@ -21,8 +21,8 @@ jobs:
           node-version: '20'
       - name: Commit messages
         env:
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        run: echo "$COMMIT_MESSAGES"
+          COMMIT_MESSAGES: ${{ toJson(github.event.pull_request.title) }}
+        run: echo "$COMMIT_MESSAGES" ; echo "$SKIP_COMMIT"
       - name: Install dependencies
         run: npm ci
       - name: Check style
