--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
     types: [opened, synchronize]
 
 env:
-  SKIP_COMMIT: ${{ contains(github.event.head_commit.message, '#skip') }}
+  SKIP_COMMIT: ${{ contains(github.event.head_commit.message || '', '#skip') }}
 
 jobs:
   simple_deployment_pipeline:
@@ -56,9 +56,9 @@ jobs:
   discord_notify:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-22.04
+    if: ${{ github.event_name == 'push' && !env.SKIP_COMMIT }}
     steps:
       - name: Discord notification
-        if: ${{ github.event_name == 'push' && !env.SKIP_COMMIT }}
         uses: sarisia/actions-status-discord@v1
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
