--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Commit messages
         env:
           COMMIT_MESSAGES: ${{ github.event.head_commit.message }}
-        run: echo "$COMMIT_MESSAGES" ; echo "$SKIP_COMMIT" ; echo "$github.event_name"
+        run: echo "$COMMIT_MESSAGES" ; echo "$SKIP_COMMIT" ; echo "${{ github.event_name }}"
       - name: Install dependencies
         run: npm ci
       - name: Check style
