--- a/.github/workflows/health_check.yml
+++ b/.github/workflows/health_check.yml
@@ -3,11 +3,15 @@ name: Health Check
 on:
   schedule:
     - cron: '*/15 * * * *'
-  workflow_dispatch:
 
 jobs:
   health_check:
     runs-on: ubuntu-22.04
     steps:
-      - name: Check the health of the Render service
-        run: curl --fail https://full-stack-open-pokedex-mj6x.onrender.com/health
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v4
+        with:
+          url: https://full-stack-open-pokedex-mj6x.onrender.com/health
+          max-attempts: 3
+          retry-delay: 5s
+          retry-all: false
