--- a/.github/workflows/health_check.yml
+++ b/.github/workflows/health_check.yml
@@ -2,7 +2,8 @@ name: Health Check
 
 on:
   schedule:
-    - cron: '*/15 * * * *'
+    - cron: '*/60 * * * *'
+  workflow_dispatch:
 
 jobs:
   health_check:
